modify deprecated for jdk21