@@ -93,7 +93,9 @@ public class InitialLoadAppConf extends InitialLoadAbstract
 				String langCode = appConf.getLangCode();
 				if ( langCode != null && langCode.isEmpty() == false )
 				{
-					Locale nextLocale = new Locale( langCode );
+					// deprecated version 19
+					//Locale nextLocale = new Locale( langCode );
+					Locale nextLocale = Locale.of( langCode );
 					Locale.setDefault( nextLocale );
 				}
 			}
